--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,10 @@ import Phone from "@/components/icons/Phone.astro"
 import { Button } from "@/components/ui/button"
 ---
 
-<header class="flex h-20 items-center bg-background px-9 text-foreground shadow-sm">
+<header
+	id="header-nav"
+	class="fixed z-50 flex h-20 w-full items-center bg-transparent px-9 text-foreground shadow-sm"
+>
 	<nav class="flex w-full items-center justify-between">
 		<a href="/"><Image class="h-12 w-auto" src={foxLogo} alt="Fox Ordering logo." /></a>
 		<div class="flex items-center gap-4">
@@ -16,7 +19,7 @@ import { Button } from "@/components/ui/button"
 			<HeaderLink href="/blog">Blog</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
 		</div>
-		<div class="flex items-center gap-2">
+		<div class="flex items-center gap-4">
 			<Link class="flex items-center" href="tel:8668836967" target="_blank"
 				><Phone class="mr-2 size-4 shrink-0" /> 866-883-6967
 			</Link>
@@ -24,3 +27,16 @@ import { Button } from "@/components/ui/button"
 		</div>
 	</nav>
 </header>
+<style>
+	#header-nav {
+		animation: blur linear both;
+		animation-timeline: scroll(root);
+		animation-range: 0 200px;
+	}
+
+	@keyframes blur {
+		to {
+			background-color: hsl(var(--background));
+		}
+	}
+</style>
