feat(home): create the hero

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { FreeDemoForm } from "@/components/free-demo-form"
 import { SITE_DESCRIPTION, SITE_TITLE } from "@/consts"
 import RootLayout from "@/layouts/RootLayout.astro"
 import "@/styles/globals.css"
@@ -6,35 +7,34 @@ import "@/styles/globals.css"
 
 <RootLayout title={SITE_TITLE} description={SITE_DESCRIPTION}>
 	<main>
-		<h1>🧑‍🚀 Hello, Astronaut!</h1>
-		<p>
-			Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This template
-			serves as a lightweight, minimally-styled starting point for anyone looking to build a personal
-			website, blog, or portfolio with Astro.
-		</p>
-		<p>
-			This template comes with a few integrations already configured in your
-			<code>astro.config.mjs</code> file. You can customize your setup with
-			<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind, React,
-			or Vue to your project.
-		</p>
-		<p>Here are a few ideas on how to get started with the template:</p>
-		<ul>
-			<li>Edit this page in <code>src/pages/index.astro</code></li>
-			<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-			<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-			<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-			<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-		</ul>
-		<p>
-			Have fun! If you get stuck, remember to <a href="https://docs.astro.build/">read the docs </a>
-			or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-		</p>
-		<p>
-			Looking for a blog template with a bit more personality? Check out <a
-				href="https://github.com/Charca/astro-blog-template"
-				>astro-blog-template
-			</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-		</p>
+		<section class="hero flex min-h-screen w-full pt-20">
+			<div class="container flex h-fit items-center justify-end gap-8">
+				<div class="max-w-md">
+					<h1 class="mx-auto text-right text-5xl tracking-tighter md:text-6xl lg:text-7xl">
+						Unleash your Restaurant’s Success!
+					</h1>
+					<p class="mt-8 text-pretty text-right text-lg">
+						<strong>Increase sales, orders, & maximize profits.</strong> Try our personalized ordering
+						system and experience the best direct online ordering service for your restaurant <strong
+							>#FoxExperience.</strong
+						>
+					</p>
+				</div>
+				<div class="h-fit rounded-lg bg-background/75 p-6">
+					<h2 class="mb-4 max-w-sm text-balance text-center text-2xl font-normal tracking-tight">
+						Are you the owner or manager of the restaurant?
+					</h2>
+					<FreeDemoForm client:load />
+				</div>
+			</div>
+		</section>
 	</main>
 </RootLayout>
+
+<style>
+	.hero {
+		background-image: url("/banner-home.jpg");
+		background-size: cover;
+		background-position: center;
+	}
+</style>
