--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,7 +32,7 @@
 	}
 
 	.dark {
-		--background: 214, 100%, 8%;
+		--background: 214 100% 8%;
 		--foreground: 210 40% 98%;
 		--card: 214, 100%, 8%;
 		--card-foreground: 210 40% 98%;
