feat: update header navigation links and add support and order online links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,9 +15,11 @@ import Phone from "@/components/icons/Phone.astro"
 	<nav class="flex w-full items-center justify-between">
 		<a href="/"><Image class="h-12 w-auto" src={foxLogo} alt="Fox Ordering logo." /></a>
 		<div class="flex items-center gap-4">
-			<HeaderLink href="/">Home</HeaderLink>
+			<HeaderLink href="#">What we Offer</HeaderLink>
+			<HeaderLink href="/about">About Us</HeaderLink>
+			<HeaderLink href="#">Support</HeaderLink>
+			<HeaderLink href="#">Order Online</HeaderLink>
 			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
 		</div>
 		<div class="flex items-center gap-4">
 			<Link class="flex items-center" href="tel:8668836967" target="_blank"
