feat(footer): update footer links and remove unused imports

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,33 +18,33 @@ import { buttonVariants } from "@/components/ui/button"
 		<div class="container grid grid-cols-5">
 			<div class="flex flex-col">
 				<h5 class="mb-6 text-xl font-bold text-primary">Company</h5>
-				<FooterLink href="/about">Why Fox Ordering?</FooterLink>
+				<FooterLink href="/#">Why Fox Ordering?</FooterLink>
 				<FooterLink href="/about">About Us</FooterLink>
-				<FooterLink href="/about">Success Stories</FooterLink>
-				<FooterLink href="/about">Blog</FooterLink>
-				<FooterLink href="/about">Work with Us</FooterLink>
+				<FooterLink href="/#">Success Stories</FooterLink>
+				<FooterLink href="/blog">Blog</FooterLink>
+				<FooterLink href="/#">Work with Us</FooterLink>
 			</div>
 
 			<div class="flex flex-col">
 				<h5 class="mb-6 text-xl font-bold text-primary">Become a Partner</h5>
-				<FooterLink href="/about">Order Online</FooterLink>
-				<FooterLink href="/about">Our Partners & Integrations</FooterLink>
-				<FooterLink href="/about">FromTheRestaurant</FooterLink>
-				<FooterLink href="/about">Refer a Restaurant</FooterLink>
+				<FooterLink href="/#">Order Online</FooterLink>
+				<FooterLink href="/#">Our Partners & Integrations</FooterLink>
+				<FooterLink href="/#">FromTheRestaurant</FooterLink>
+				<FooterLink href="/#">Refer a Restaurant</FooterLink>
 			</div>
 
 			<div class="flex flex-col">
 				<h5 class="mb-6 text-xl font-bold text-primary">Contact Us</h5>
-				<FooterLink href="/about">866-883-6967</FooterLink>
-				<FooterLink href="/about">contact@foxordering.com</FooterLink>
+				<FooterLink href="/#">866-883-6967</FooterLink>
+				<FooterLink href="/#">contact@foxordering.com</FooterLink>
 			</div>
 
 			<div class="flex flex-col">
 				<h5 class="mb-6 text-xl font-bold text-primary">Support</h5>
-				<FooterLink href="/about">Frequently Asked</FooterLink>
-				<FooterLink href="/about">Questions</FooterLink>
-				<FooterLink href="/about">Speak with an Agent</FooterLink>
-				<FooterLink href="/about">Google 3rd Party Disclosure Statement</FooterLink>
+				<FooterLink href="/#">Frequently Asked</FooterLink>
+				<FooterLink href="/#">Questions</FooterLink>
+				<FooterLink href="/#">Speak with an Agent</FooterLink>
+				<FooterLink href="/#">Google 3rd Party Disclosure Statement</FooterLink>
 			</div>
 
 			<div class="flex h-full items-center">
