--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,52 +4,56 @@ import { Image } from "astro:assets"
 import foxLogo from "@/assets/logo-white.png"
 import FooterLink from "@/components/FooterLink.astro"
 import FooterLinkIcon from "@/components/FooterLinkIcon.astro"
-import Facebook from "@/components/icons/Facebook.astro"
-import Instagram from "@/components/icons/Instagram.astro"
-import Linkedin from "@/components/icons/Linkedin.astro"
-import MapPin from "@/components/icons/MapPin.astro"
-import X from "@/components/icons/X.astro"
+import FacebookIcon from "@/components/icons/Facebook.astro"
+import InstagramIcon from "@/components/icons/Instagram.astro"
+import LinkedinIcon from "@/components/icons/Linkedin.astro"
+import MapPinIcon from "@/components/icons/MapPin.astro"
+import XIcon from "@/components/icons/X.astro"
 import Link from "@/components/Link.astro"
 import { buttonVariants } from "@/components/ui/button"
+import { getI18N } from "@/i18n"
+
+const { currentLocale } = Astro
+const i18n = getI18N({ currentLocale })
 ---
 
 <footer class="flex flex-col">
 	<div class="bg-white py-20">
-		<div class="container grid grid-cols-5">
+		<div class="container flex flex-wrap justify-between gap-4">
 			<div class="flex flex-col">
-				<h5 class="mb-6 text-xl font-bold text-primary">Company</h5>
-				<FooterLink href="/#">Why Fox Ordering?</FooterLink>
-				<FooterLink href="/about">About Us</FooterLink>
-				<FooterLink href="/#">Success Stories</FooterLink>
-				<FooterLink href="/blog">Blog</FooterLink>
-				<FooterLink href="/#">Work with Us</FooterLink>
+				<h5 class="mb-6 text-xl font-bold text-primary">{i18n.FOOTER.COMPANY.TITLE}</h5>
+				<FooterLink href="/#">{i18n.FOOTER.COMPANY.WHY_FOX}</FooterLink>
+				<FooterLink href="/#">{i18n.FOOTER.COMPANY.ABOUT_US}</FooterLink>
+				<FooterLink href="/#">{i18n.FOOTER.COMPANY.SUCCESS_STORIES}</FooterLink>
+				<FooterLink href="/#">{i18n.FOOTER.COMPANY.BLOG}</FooterLink>
+				<FooterLink href="/#">{i18n.FOOTER.COMPANY.WORK_WITH_US}</FooterLink>
 			</div>
 
 			<div class="flex flex-col">
-				<h5 class="mb-6 text-xl font-bold text-primary">Become a Partner</h5>
-				<FooterLink href="/#">Order Online</FooterLink>
-				<FooterLink href="/#">Our Partners & Integrations</FooterLink>
-				<FooterLink href="/#">FromTheRestaurant</FooterLink>
-				<FooterLink href="/#">Refer a Restaurant</FooterLink>
+				<h5 class="mb-6 text-xl font-bold text-primary">{i18n.FOOTER.PARTNER.TITLE}</h5>
+				<FooterLink href="/#">{i18n.FOOTER.PARTNER.ORDER_ONLINE}</FooterLink>
+				<FooterLink href="/#">{i18n.FOOTER.PARTNER.PARTNERS_AND_INTEGRATIONS}</FooterLink>
+				<FooterLink href="/#">{i18n.FOOTER.PARTNER.FROM_THE_RESTAURANT}</FooterLink>
+				<FooterLink href="/#">{i18n.FOOTER.PARTNER.REFER_RESTAURANT}</FooterLink>
 			</div>
 
 			<div class="flex flex-col">
-				<h5 class="mb-6 text-xl font-bold text-primary">Contact Us</h5>
-				<FooterLink href="/#">866-883-6967</FooterLink>
-				<FooterLink href="/#">contact@foxordering.com</FooterLink>
+				<h5 class="mb-6 text-xl font-bold text-primary">{i18n.FOOTER.CONTACT_US.TITLE}</h5>
+				<FooterLink href="tel:8668836967" target="_blank">{i18n.FOOTER.CONTACT_US.PHONE}</FooterLink
+				>
+				<FooterLink href="/#">{i18n.FOOTER.CONTACT_US.EMAIL}</FooterLink>
 			</div>
 
 			<div class="flex flex-col">
-				<h5 class="mb-6 text-xl font-bold text-primary">Support</h5>
-				<FooterLink href="/#">Frequently Asked</FooterLink>
-				<FooterLink href="/#">Questions</FooterLink>
-				<FooterLink href="/#">Speak with an Agent</FooterLink>
-				<FooterLink href="/#">Google 3rd Party Disclosure Statement</FooterLink>
+				<h5 class="mb-6 text-xl font-bold text-primary">{i18n.FOOTER.SUPPORT.TITLE}</h5>
+				<FooterLink href="/#">{i18n.FOOTER.SUPPORT.FAQ}</FooterLink>
+				<FooterLink href="/#">{i18n.FOOTER.SUPPORT.SPEAK_WITH_AGENT}</FooterLink>
+				<FooterLink href="/#">{i18n.FOOTER.SUPPORT.GOOGLE_3RD_PARTY}</FooterLink>
 			</div>
 
-			<div class="flex h-full items-center">
+			<div class="flex h-auto min-w-40 items-center">
 				<Link class:list={["w-full", buttonVariants({ variant: "default" })]} href="/#"
-					>Order Food</Link
+					>{i18n.FOOTER.FOOTER_BUTTON}</Link
 				>
 			</div>
 		</div>
@@ -58,13 +62,13 @@ import { buttonVariants } from "@/components/ui/button"
 	<div class="container flex items-center justify-between py-14">
 		<a href="/"><Image class="h-16 w-auto" src={foxLogo} alt="Fox Ordering logo." /></a>
 		<div class="flex items-center">
-			<MapPin class="mr-2 size-4 shrink-0 text-primary" /> 4301 Oak Circle, Boca Raton, FL 33431
+			<MapPinIcon class="mr-2 size-4 shrink-0 text-primary" /> 4301 Oak Circle, Boca Raton, FL 33431
 		</div>
 		<div class="flex items-center gap-6">
-			<FooterLinkIcon href="#"><Instagram class="size-10 shrink-0" /></FooterLinkIcon>
-			<FooterLinkIcon href="#"><Facebook class="size-10 shrink-0" /></FooterLinkIcon>
-			<FooterLinkIcon href="#"><X class="size-10 shrink-0" /></FooterLinkIcon>
-			<FooterLinkIcon href="#"><Linkedin class="size-10 shrink-0" /></FooterLinkIcon>
+			<FooterLinkIcon href="#"><InstagramIcon class="size-10 shrink-0" /></FooterLinkIcon>
+			<FooterLinkIcon href="#"><FacebookIcon class="size-10 shrink-0" /></FooterLinkIcon>
+			<FooterLinkIcon href="#"><XIcon class="size-10 shrink-0" /></FooterLinkIcon>
+			<FooterLinkIcon href="#"><LinkedinIcon class="size-10 shrink-0" /></FooterLinkIcon>
 		</div>
 	</div>
 </footer>
