--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -2,13 +2,20 @@
 import BaseHead from "@/components/BaseHead.astro"
 import Footer from "@/components/Footer.astro"
 import Header from "@/components/Header.astro"
+import { getLangFromUrl } from "@/i18n/utils"
 import "@/styles/globals.css"
 
+interface Props {
+	description: string
+	title: string
+}
+
 const { title, description } = Astro.props
+const lang = getLangFromUrl(Astro.url)
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang={lang}>
 	<head>
 		<BaseHead title={title} description={description} />
 	</head>
