--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,13 +6,12 @@ import HeaderLink from "@/components/HeaderLink.astro"
 import LanguageSelector from "@/components/LanguageSelector.astro"
 import { FreeDemoDialog } from "@/components/free-demo-dialog"
 import { getI18N } from "@/i18n"
-import { getLangFromUrl, useTranslatedPath, useTranslations } from "@/i18n/utils"
+import { getLangFromUrl, useTranslatedPath } from "@/i18n/utils"
 
 const { currentLocale } = Astro
 const i18n = getI18N({ currentLocale })
 
 const lang = getLangFromUrl(Astro.url)
-const t = useTranslations(lang)
 const translatePath = useTranslatedPath(lang)
 // import Phone from "@/components/icons/Phone.astro"
 // import Link from "@/components/Link.astro"
