--- a/src/pages/what-we-offer.astro
+++ b/src/pages/what-we-offer.astro
@@ -1,5 +1,5 @@
 ---
-import WhatWeOffer from "@/components/pages/WhatWeOffer.astro"
+import WhatWeOfferPage from "@/components/pages/WhatWeOffer.astro"
 ---
 
-<WhatWeOffer />
+<WhatWeOfferPage />
