--- a/src/components/FooterLink.astro
+++ b/src/components/FooterLink.astro
@@ -13,7 +13,7 @@ const { href, class: className, ...props } = Astro.props
 	{...props}
 >
 	<span
-		class="bg-gradient-to-r from-primary to-primary bg-[length:0%_1.5px] bg-left-bottom bg-no-repeat pb-0.5 transition-all duration-300 ease-out group-hover:bg-[length:100%_1.5px]"
+		class="bg-gradient-to-r from-black to-black bg-[length:0%_1.5px] bg-left-bottom bg-no-repeat pb-0.5 transition-all duration-300 ease-out group-hover:bg-[length:100%_1.5px]"
 	>
 		<slot />
 	</span>
