--- a/src/components/pages/WhatWeOffer.astro
+++ b/src/components/pages/WhatWeOffer.astro
@@ -7,7 +7,7 @@ const { currentLocale } = Astro
 const i18n = getI18N({ currentLocale })
 ---
 
-<RootLayout title={i18n.SEO_TITLE} description={i18n.SEO_DESCRIPTION}>
+<RootLayout title={i18n.SEO.WHAT_WE_OFFER_TITLE} description={i18n.SEO.WHAT_WE_OFFER__DESCRIPTION}>
 	<main>
 		<section class="hero mt-20 flex min-h-screen w-full py-20">
 			<div class="container flex h-fit items-center gap-8">
@@ -25,7 +25,7 @@ const i18n = getI18N({ currentLocale })
 
 <style>
 	.hero {
-		background-image: url("/banner-what-we-offer.jpg");
+		background-image: url("/banner-what-we-offer.webp");
 		background-size: cover;
 		background-position: center;
 	}
