--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -2,81 +2,51 @@
 import type { CollectionEntry } from "astro:content"
 import BaseHead from "../components/BaseHead.astro"
 import Footer from "../components/Footer.astro"
-import FormattedDate from "../components/FormattedDate.astro"
 import Header from "../components/Header.astro"
 
 type Props = CollectionEntry<"blog">["data"]
 
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props
+const { title, description, pubDate, updatedDate, heroImage, author } = Astro.props
 ---
 
-<html lang="en">
+<html class="w-full overflow-x-hidden" lang="en">
 	<head>
 		<BaseHead title={title} description={description} />
 		<style>
-			main {
-				width: calc(100% - 2em);
-				max-width: 100%;
-				margin: 0;
-			}
-			.hero-image {
-				width: 100%;
-			}
-			.hero-image img {
-				display: block;
-				margin: 0 auto;
-				border-radius: 12px;
-				box-shadow: var(--box-shadow);
-			}
-			.prose {
-				width: 720px;
-				max-width: calc(100% - 2em);
-				margin: auto;
-				padding: 1em;
-				color: rgb(var(--gray-dark));
-			}
-			.title {
-				margin-bottom: 1em;
-				padding: 1em 0;
-				text-align: center;
-				line-height: 1;
-			}
-			.title h1 {
-				margin: 0 0 0.5em 0;
-			}
-			.date {
-				margin-bottom: 0.5em;
-				color: rgb(var(--gray));
-			}
-			.last-updated-on {
-				font-style: italic;
+			p {
+				margin-bottom: 1rem;
+				background-color: aliceblue;
 			}
 		</style>
 	</head>
 
-	<body class="dark">
+	<body class="dark w-full overflow-x-hidden">
 		<Header />
-		<main>
-			<article>
-				<div class="hero-image">
-					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
-				</div>
-				<div class="prose">
-					<div class="title">
-						<div class="date">
-							<FormattedDate date={pubDate} />
-							{
-								updatedDate && (
-									<div class="last-updated-on">
-										Last updated on <FormattedDate date={updatedDate} />
-									</div>
-								)
-							}
-						</div>
-						<h1>{title}</h1>
-						<hr />
+		<main class="w-full border-b bg-white text-black">
+			<article class="container flex gap-6 pb-20 pt-40">
+				<div class="flex w-2/3 flex-col gap-4">
+					<h1 class="text-3xl font-bold text-black md:text-5xl lg:text-6xl">
+						{title}
+					</h1>
+
+					{
+						author && (
+							<div class="flex items-center justify-start gap-2">
+								<img
+									class="size-10 rounded-full bg-cover bg-center"
+									src="https://i.pravatar.cc/150?u=a042581f4e29026704d"
+									alt=""
+								/>
+								<span class="text-xs text-border">by {author}</span>
+							</div>
+						)
+					}
+
+					<div
+						class="mt-4 flex flex-col gap-y-2 [&>h2]:text-2xl [&>h2]:font-bold [&>ol]:ml-4 [&>ol]:list-decimal [&>p]:mb-4"
+					>
+						<slot />
 					</div>
-					<slot />
 				</div>
 			</article>
 		</main>
