--- a/src/components/pages/App.astro
+++ b/src/components/pages/App.astro
@@ -1,4 +1,9 @@
 ---
+import { Image } from "astro:assets"
+
+import savingCommissions from "@/assets/28.png"
+import incresaseSales from "@/assets/36.png"
+import moreOrders from "@/assets/43.png"
 import { FreeDemoForm } from "@/components/free-demo-form"
 import { getI18N } from "@/i18n"
 import RootLayout from "@/layouts/RootLayout.astro"
@@ -26,6 +31,25 @@ const i18n = getI18N({ currentLocale })
 				</div>
 			</div>
 		</section>
+
+		<section class="bg-white py-20 text-black">
+			<div class="container flex h-fit flex-wrap items-center justify-between gap-8">
+				<div class="relative mx-auto pb-4 pr-16">
+					<Image src={moreOrders} alt="" />
+					<p class="absolute right-0 top-32 max-w-40 text-xl">{i18n.FIRST_BENEFIT}</p>
+				</div>
+				<div class="relative mx-auto pb-4 pr-16">
+					<Image src={incresaseSales} alt="" />
+					<p class="absolute right-0 top-32 max-w-40 text-xl">{i18n.SECOND_BENEFIT}</p>
+				</div>
+				<div class="relative mx-auto pb-4 pr-16">
+					<Image src={savingCommissions} alt="" />
+					<p class="absolute right-0 top-32 max-w-40 text-xl">{i18n.THIRD_BENEFIT}</p>
+				</div>
+			</div>
+		</section>
+
+		<section class="h-screen"></section>
 	</main>
 </RootLayout>
 
