--- a/src/components/FooterLink.astro
+++ b/src/components/FooterLink.astro
@@ -1,20 +1,26 @@
 ---
 import type { HTMLAttributes } from "astro/types"
+import { buttonVariants } from "./ui/button"
 
 type Props = HTMLAttributes<"a">
 
 const { href, class: className, ...props } = Astro.props
+// class="group text-black transition-all duration-300 ease-in-out"
+// class:list={[className]}
 ---
 
 <a
 	href={href}
-	class="group text-black transition-all duration-300 ease-in-out"
-	class:list={[className]}
 	{...props}
+	class:list={[
+		className,
+		"h-fit w-fit px-0 py-0 font-normal !text-black",
+		buttonVariants({ variant: "link" }),
+	]}
 >
-	<span
+	<!-- <span
 		class="bg-gradient-to-r from-black to-black bg-[length:0%_1.5px] bg-left-bottom bg-no-repeat pb-0.5 transition-all duration-300 ease-out group-hover:bg-[length:100%_1.5px]"
 	>
-		<slot />
-	</span>
+</span> -->
+	<slot />
 </a>
