feat(footer): improve footer css styles

--- a/src/components/FooterLink.astro
+++ b/src/components/FooterLink.astro
@@ -15,7 +15,7 @@ const { href, class: className, ...props } = Astro.props
 	class:list={[
 		buttonVariants({ variant: "link" }),
 		className,
-		"h-fit w-fit px-0 py-0 font-normal !text-black",
+		"!h-fit !w-fit !p-0 font-normal !text-black",
 	]}
 >
 	<!-- <span
