--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,8 +24,8 @@ const translatePath = useTranslatedPath(lang)
 <footer class="flex flex-col">
 	<div class="bg-white py-20">
 		<div class="container flex flex-wrap justify-between gap-4">
-			<div class="flex flex-col">
-				<h5 class="mb-6 text-xl font-bold text-primary">{i18n.FOOTER.COMPANY.TITLE}</h5>
+			<div class="flex flex-col gap-y-1">
+				<h5 class="mb-5 text-xl font-bold text-primary">{i18n.FOOTER.COMPANY.TITLE}</h5>
 				<FooterLink href="/#">{i18n.FOOTER.COMPANY.WHY_FOX}</FooterLink>
 				<FooterLink href="/#">{i18n.FOOTER.COMPANY.ABOUT_US}</FooterLink>
 				<FooterLink href="/#">{i18n.FOOTER.COMPANY.SUCCESS_STORIES}</FooterLink>
@@ -33,23 +33,23 @@ const translatePath = useTranslatedPath(lang)
 				<FooterLink href="/#">{i18n.FOOTER.COMPANY.WORK_WITH_US}</FooterLink>
 			</div>
 
-			<div class="flex flex-col">
-				<h5 class="mb-6 text-xl font-bold text-primary">{i18n.FOOTER.PARTNER.TITLE}</h5>
+			<div class="flex flex-col gap-y-1">
+				<h5 class="mb-5 text-xl font-bold text-primary">{i18n.FOOTER.PARTNER.TITLE}</h5>
 				<FooterLink href="/#">{i18n.FOOTER.PARTNER.ORDER_ONLINE}</FooterLink>
 				<FooterLink href="/#">{i18n.FOOTER.PARTNER.PARTNERS_AND_INTEGRATIONS}</FooterLink>
 				<FooterLink href="/#">{i18n.FOOTER.PARTNER.FROM_THE_RESTAURANT}</FooterLink>
 				<FooterLink href="/#">{i18n.FOOTER.PARTNER.REFER_RESTAURANT}</FooterLink>
 			</div>
 
-			<div class="flex flex-col">
-				<h5 class="mb-6 text-xl font-bold text-primary">{i18n.FOOTER.CONTACT_US.TITLE}</h5>
+			<div class="flex flex-col gap-y-1">
+				<h5 class="mb-5 text-xl font-bold text-primary">{i18n.FOOTER.CONTACT_US.TITLE}</h5>
 				<FooterLink href="tel:8668836967" target="_blank">{i18n.FOOTER.CONTACT_US.PHONE}</FooterLink
 				>
 				<FooterLink href="/#">{i18n.FOOTER.CONTACT_US.EMAIL}</FooterLink>
 			</div>
 
-			<div class="flex flex-col">
-				<h5 class="mb-6 text-xl font-bold text-primary">{i18n.FOOTER.SUPPORT.TITLE}</h5>
+			<div class="flex flex-col gap-y-1">
+				<h5 class="mb-5 text-xl font-bold text-primary">{i18n.FOOTER.SUPPORT.TITLE}</h5>
 				<FooterLink href="/#">{i18n.FOOTER.SUPPORT.FAQ}</FooterLink>
 				<FooterLink href="/#">{i18n.FOOTER.SUPPORT.SPEAK_WITH_AGENT}</FooterLink>
 				<FooterLink href="/#">{i18n.FOOTER.SUPPORT.GOOGLE_3RD_PARTY}</FooterLink>
