--- a/src/components/FooterLink.astro
+++ b/src/components/FooterLink.astro
@@ -2,25 +2,21 @@
 import type { HTMLAttributes } from "astro/types"
 import { buttonVariants } from "./ui/button"
 
+import { cn } from "@/lib/utils"
+
 type Props = HTMLAttributes<"a">
 
 const { href, class: className, ...props } = Astro.props
-// class="group text-black transition-all duration-300 ease-in-out"
-// class:list={[className]}
 ---
 
 <a
 	href={href}
 	{...props}
-	class:list={[
+	class:list={cn(
 		buttonVariants({ variant: "link" }),
 		className,
-		"!h-fit !w-fit !p-0 font-normal !text-black",
-	]}
+		"h-fit w-fit p-0 font-normal text-black"
+	)}
 >
-	<!-- <span
-		class="bg-gradient-to-r from-black to-black bg-[length:0%_1.5px] bg-left-bottom bg-no-repeat pb-0.5 transition-all duration-300 ease-out group-hover:bg-[length:100%_1.5px]"
-	>
-</span> -->
 	<slot />
 </a>
