feat(steps): add section to homepage

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -25,7 +25,7 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props
 <!-- Font preloads -->
 <link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
 <link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin />
-<link rel="preload" href="/fonts/Betterlett.ttf" as="font" type="font/ttf" crossorigin />
+<link rel="preload" href="/fonts/betterlett.ttf" as="font" type="font/ttf" crossorigin />
 
 <!-- Heros preloads -->
 <link rel="preload" href="/banner-home.jpg" as="image" />
