--- a/src/components/pages/App.astro
+++ b/src/components/pages/App.astro
@@ -2,6 +2,7 @@
 import { Image } from "astro:assets"
 import Accomplishments from "../sections/Accomplishments.astro"
 import Restaurants from "../sections/Restaurants.astro"
+import Steps from "../sections/Steps.astro"
 import Testimonial from "../sections/Testimonial.astro"
 
 import savingCommissions from "@/assets/benefit-28.png"
@@ -56,7 +57,7 @@ const i18n = getI18N({ currentLocale })
 
 		<Restaurants />
 
-		<section class="bg-gradient-to-b from-background to-[#043F51] py-20"></section>
+		<Steps />
 
 		<Accomplishments />
 
