--- a/src/components/sections/Accomplishments.astro
+++ b/src/components/sections/Accomplishments.astro
@@ -16,7 +16,7 @@ const i18n = getI18N({ currentLocale })
 <section class="bg-[#F3EFEF] py-20 text-black">
 	<div class="container flex items-center justify-between gap-8">
 		<div class="flex h-full max-w-lg flex-col items-start justify-center gap-4">
-			<p class="text-pretty text-3xl font-bold">{i18n.ACCOMPLISHMENTS_TEXT}</p>
+			<h2 class="text-pretty text-3xl font-bold">{i18n.ACCOMPLISHMENTS_TEXT}</h2>
 			<a class:list={cn(buttonVariants({ variant: "link" }), "group h-fit w-fit p-0")} href="/#"
 				>{i18n.ACCOMPLISHMENTS_BUTTON}
 				<ChevronRightIcon
