--- a/src/components/sections/Steps.astro
+++ b/src/components/sections/Steps.astro
@@ -9,7 +9,7 @@ const i18n = getI18N({ currentLocale })
 
 <section class="flex bg-gradient-to-b from-background to-[#043F51] py-20">
 	<div class="container flex flex-col gap-8">
-		<h2 set:html={i18n.STEPS_TITLE} class="text-pretty pb-2 text-center text-5xl" />
+		<h2 set:html={i18n.STEPS_TITLE} class="text-pretty pb-2 text-center text-5xl font-light" />
 		<SwipeCarousel currentLocale={currentLocale ?? "en"} client:visible />
 	</div>
 </section>
