style(WhyFox): separating in individual components

--- a/src/components/sections/WhyFox.astro
+++ b/src/components/sections/WhyFox.astro
@@ -1,5 +1,5 @@
 ---
-import { StickyScrollReveal } from "../ui/sticky-scroll-reveal"
+import { StickyScrollReveal } from "../StickyScrollReveal"
 
 const { currentLocale } = Astro
 ---
