--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -30,6 +30,7 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props
 <!-- Heros preloads -->
 <link rel="preload" href="/banner-home.jpg" as="image" />
 <link rel="preload" href="/banner-what-we-offer.webp" as="image" />
+<link rel="preload" href="/banner-support.jpg" as="image" />
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
