--- a/src/components/pages/WhatWeOffer.astro
+++ b/src/components/pages/WhatWeOffer.astro
@@ -1,32 +1,29 @@
 ---
+import BrandedApp from "../sections/what-we-offer/BrandedApp.astro"
+import CallRelay from "../sections/what-we-offer/CallRelay.astro"
+import Capital from "../sections/what-we-offer/Capital.astro"
+import FoxPush from "../sections/what-we-offer/FoxPush.astro"
+import FTR from "../sections/what-we-offer/FTR.astro"
+import Hero from "../sections/what-we-offer/Hero.astro"
+import PerfectTechmate from "../sections/what-we-offer/PerfectTechmate.astro"
+import PerzonalizedWebsite from "../sections/what-we-offer/PersonalizedWebsite.astro"
+
 import { getI18N } from "@/i18n"
 import RootLayout from "@/layouts/RootLayout.astro"
-import "@/styles/globals.css"
 
 const { currentLocale } = Astro
 const i18n = getI18N({ currentLocale })
 ---
 
-<RootLayout title={i18n.SEO.WHAT_WE_OFFER_TITLE} description={i18n.SEO.WHAT_WE_OFFER__DESCRIPTION}>
+<RootLayout title={i18n.SEO.WHAT_WE_OFFER_TITLE} description={i18n.SEO.WHAT_WE_OFFER_DESCRIPTION}>
 	<main>
-		<section class="hero mt-20 flex min-h-screen w-full py-20">
-			<div class="container flex h-fit items-center gap-8">
-				<div class="max-w-md">
-					<h1 class="mx-auto text-5xl tracking-tighter text-primary md:text-6xl lg:text-7xl">
-						{i18n.WHAT_WE_OFFER.HERO_TITLE}
-					</h1>
-					<h2 class="mt-8 text-pretty text-lg text-black">{i18n.WHAT_WE_OFFER.HERO_SUBTITLE}</h2>
-					<p set:html={i18n.WHAT_WE_OFFER.HERO_TEXT} class="mt-8 text-pretty text-black" />
-				</div>
-			</div>
-		</section>
+		<Hero />
+		<PerfectTechmate />
+		<PerzonalizedWebsite />
+		<Capital />
+		<FTR />
+		<BrandedApp />
+		<FoxPush />
+		<CallRelay />
 	</main>
 </RootLayout>
-
-<style>
-	.hero {
-		background-image: url("/banner-what-we-offer.webp");
-		background-size: cover;
-		background-position: center;
-	}
-</style>
