--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,7 +27,7 @@ const translatePath = useTranslatedPath(lang)
 			<HeaderLink href={translatePath("/what-we-offer")}>{i18n.HEADER_WHAT_WE_OFFER}</HeaderLink>
 			<HeaderLink href="#">{i18n.HEADER_ABOUT_US}</HeaderLink>
 			<HeaderLink href={translatePath("/support")}>{i18n.HEADER_SUPPORT}</HeaderLink>
-			<HeaderLink href="#">{i18n.HEADER_ORDER_ONLINE}</HeaderLink>
+			<HeaderLink href={translatePath("/order-online")}>{i18n.HEADER_ORDER_ONLINE}</HeaderLink>
 		</div>
 		<div class="flex items-center gap-4">
 			<LanguageSelector />
