--- a/src/pages/es/soporte.astro
+++ b/src/pages/es/soporte.astro
@@ -1,5 +1,5 @@
 ---
-import Support from "@/components/pages/Support.astro"
+import SupportPage from "@/components/pages/Support.astro"
 ---
 
-<Support />
+<SupportPage />
