--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -31,7 +31,8 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props
 <link rel="preload" href="/banner-home.jpg" as="image" />
 <link rel="preload" href="/banner-what-we-offer.webp" as="image" />
 <link rel="preload" href="/banner-support.jpg" as="image" />
-<link rel="preload" href="/order-online.jpg" as="image" />
+<link rel="preload" href="/banner-order-online.jpg" as="image" />
+<link rel="preload" href="/banner-about-us.jpg" as="image" />
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
