feat(FAQ): add page and components

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -33,6 +33,7 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props
 <link rel="preload" href="/banner-support.jpg" as="image" />
 <link rel="preload" href="/banner-order-online.jpg" as="image" />
 <link rel="preload" href="/banner-about-us.jpg" as="image" />
+<link rel="preload" href="/banner-faq.jpg" as="image" />
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
