--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,6 +28,7 @@ const translatePath = useTranslatedPath(lang)
 			<HeaderLink href={translatePath("/about-us")}>{i18n.HEADER_ABOUT_US}</HeaderLink>
 			<HeaderLink href={translatePath("/support")}>{i18n.HEADER_SUPPORT}</HeaderLink>
 			<HeaderLink href={translatePath("/order-online")}>{i18n.HEADER_ORDER_ONLINE}</HeaderLink>
+			<HeaderLink href={translatePath("/blog")}>{i18n.HEADER_BLOG}</HeaderLink>
 		</div>
 		<div class="flex items-center gap-4">
 			<LanguageSelector />
