--- a/src/components/LanguageSelector.astro
+++ b/src/components/LanguageSelector.astro
@@ -14,7 +14,7 @@ const otherLocales = Object.values(LANGUAGES).filter((locale) => locale.code !==
 
 <div class="relative inline-block text-left">
 	<div
-		class="group rounded-md text-xs font-semibold text-white backdrop-blur-lg transition-all hover:backdrop-blur-none"
+		class="group rounded-md bg-background/50 text-xs font-semibold text-white backdrop-blur-lg transition-all hover:backdrop-blur-none"
 	>
 		<Button
 			className="flex items-center gap-2 bg-transparent"
