--- a/src/components/pages/FAQ.astro
+++ b/src/components/pages/FAQ.astro
@@ -9,8 +9,8 @@ const i18n = getI18N({ currentLocale })
 ---
 
 <RootLayout title={i18n.SEO.FAQ_TITLE} description={i18n.SEO.FAQ_DESCRIPTION}>
-	<main class="text-black">
-		<section class="hero flex min-h-screen w-full pb-20 pt-40">
+	<main>
+		<section class="hero min-h-screen w-full pb-20 pt-40">
 			<div class="container text-white">
 				<h1
 					set:html={i18n.FAQ.TITLE}
