feat: update WhyFox section to lazy load images

--- a/src/components/sections/WhyFox.astro
+++ b/src/components/sections/WhyFox.astro
@@ -4,4 +4,4 @@ import { StickyScrollReveal } from "../StickyScrollReveal"
 const { currentLocale } = Astro
 ---
 
-<StickyScrollReveal currentLocale={currentLocale ?? "en"} client:visible />
+<StickyScrollReveal currentLocale={currentLocale ?? "en"} client:load />
